Fixing timesheet box height. Adding timesheet overflow.

--- a/css/style.css
+++ b/css/style.css
@@ -53,6 +53,7 @@ table {
 
 html, body {
     height: 100%;
+    min-height: 100%;
     width: 100%;
     color: black;
     font-family: Roboto;
@@ -91,6 +92,8 @@ header {
     padding: 0 20px 0 20px;
     line-height: 30px;
     color: white;
+    position: fixed;
+    width: 100%;
 }
 section, aside {
     padding-top: 26px;
@@ -98,12 +101,21 @@ section, aside {
 section {
     width: 100%;
     height: 100%;
+    min-height: 100%;
     padding: 20px;
     text-align: center;
     box-sizing: border-box;
+    position: relative;
+}
+section#main {
+    padding-top: 60px;
 }
 article {
     margin-bottom: 15px;
+}
+article#clock_buttons {
+    position:absolute;
+    width: 100%;
 }
 .logo {
     font-size: 18px;
@@ -210,6 +222,12 @@ form div button.button_add {
     font-weight: bold;
     font-size: 12px;
 }
+div.timesheet_container {
+    width: 100%;
+    height: 100%;
+    padding-top: 50px;
+    box-sizing: border-box;
+}
 div.timesheet {
     background-color: white; 
     width: 90%;
@@ -224,6 +242,7 @@ div.timesheet {
     border: 1px solid #777777;
     border-radius: 6px 6px 6px 6px;
     box-shadow: 0 0 6px rgba(0, 0, 0, 0.5);
+    overflow-y: auto;
 }
 
 div.timesheet table {
